chore: remove dark mode + minor UI fixes

--- a/src/assets/styles/Main.scss
+++ b/src/assets/styles/Main.scss
@@ -1,8 +1,4 @@
-.dark-mode .about-section {
-    background-color: rgba(0, 0, 0, 0.2);
-}
-
-.about-section {
+.presentation-section {
     display: flex;
     gap: 30px;
     justify-content: flex-start;
@@ -10,6 +6,7 @@
     width: 100%;
     padding: 0px 15%;
     min-height: 700px;
+    background-color: rgba(0, 0, 0, 0.2);
     background-image: url("../images/bg-dark.png");
     background-repeat: no-repeat;
     background-size: cover;
@@ -17,7 +14,7 @@
     background-position: center;
 }
 
-.about-section .content {
+.presentation-section .content {
     text-align: left;
     z-index: 2;
 
@@ -49,7 +46,7 @@
     }
 }
 
-.about-section .image-wrapper {
+.presentation-section .image-wrapper {
     z-index: 2;
     img {
         width: 150px;
@@ -57,7 +54,7 @@
     }
 }
 
-.about p {
+.presentation p {
     text-align: center;
     padding-top: 30%;
     padding-bottom: 30%;
